Updated microG to 0.2.24