@@ -22,7 +22,6 @@ Currently, GmsCore 0.2.24, GsfProxy 0.1.0, FakeStore 0.1.0 and MapsV1 0.1.0 are 
 
 ## Installation
 - Choose an solution for [Signature spoofing](https://github.com/microg/android_packages_apps_GmsCore/wiki/Signature-Spoofing)
-- If your chosen solution is Xposed-only, [install this apk before the module](https://gitlab.com/Nanolx/NanoDroid/-/raw/master/patcher/dexpatcher/org.spoofing.apk)
 - Install the module
 
 ## How do I get the real Play Store?
@@ -41,6 +40,10 @@ Requires wget.
 
 ### Other
 Download [this](https://raw.githubusercontent.com/topjohnwu/Magisk/master/scripts/module_installer.sh) and put it into `META-INF/com/google/android/update-binary`. And ZIP it.
+
+## SigSpoofHelper
+[Source code](https://github.com/nift4/SigSpoofHelper) is available here. The purpose is to declare the FAKE_PACKAGE_SIGNATURE on roms that do not have it.
+
 ## Credits
 
 - **microG project** for their awesome work.
