@@ -1,6 +1,6 @@
 {
-	"version": "Revived 2.5.0-0",
-	"versionCode": 25000,
-	"zipUrl": "https://github.com/nift4/microg_installer_revived/releases/download/v2.5.0-0/microG_Installer_Revived.zip",
-        "changelog": "https://github.com/nift4/microg_installer_revived/raw/v2.5.0-0/CHANGELOG"
+	"version": "Revived 2.6.0-0",
+	"versionCode": 26000,
+	"zipUrl": "https://github.com/nift4/microg_installer_revived/releases/download/v2.6.0-0/microG_Installer_Revived.zip",
+        "changelog": "https://github.com/nift4/microg_installer_revived/raw/v2.6.0-0/CHANGELOG"
 }
